feat(3.0): update version